--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@frank-mayer/react-tag-cloud": "^1.1.1",
     "@next/font": "13.1.1",
     "bootstrap": "^5.2.3",
     "eslint": "8.30.0",
