--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@frank-mayer/react-tag-cloud": "^1.1.1",
     "@next/font": "13.1.1",
+    "axios": "^1.2.1",
     "bootstrap": "^5.2.3",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.1",
