--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@frank-mayer/react-tag-cloud": "^1.1.1",
+    "@mui/material": "^5.11.2",
     "@next/font": "13.1.1",
     "axios": "^1.2.1",
     "bootstrap": "^5.2.3",
